...
        ZStack {
            Color
                .grey50
                .ignoresSafeArea()

            VStack {
                Text("IMPORTO DEL BENE")
                    .font(.PAFont.caption)
                    .foregroundColor(.paBlack)
                    .padding(.top, Constants.mediumSpacing)
                
                Group {
                    Text(viewModel.transactionData.goodsCost.formattedAmountNoCurrency)
...
                                    ButtonModel(
                                        type: .primary,
                                        themeType: .info,
                                        title: "Riprova",
                                        action: {
                                            Task {
                                                try await viewModel.deleteTransaction(loadingMessage: "Attendi qualche istante")
                                                // Repeat createTransaction and go to verifyCIE
                                                repeatTransactionCreate(viewModel: viewModel, router: router)
                                            }
                                        }),
                                    ButtonModel(
                                        type: .primaryBordered,
...
