...
                .onAppear {
                    Timer.scheduledTimer(withTimeInterval: totalDuration + 0.1, repeats: true) { _ in
                        self.animateLoader()
                    }.fire()
                }
        }
        .accessibilityIdentifier("spinner")
    }

    private var gradientColors: [Color] {
        return  [spinnerColor.opacity(0.2), spinnerColor.opacity(0.7), spinnerColor]
    }
    
...
